<resources>
    <string name="button">FirstApp</string>
    <string name="str">"Happy birthday! "</string>
    <string name="app_name">happy birthday</string>
    <string name="action_settings">Settings</string>
    <string name="button2">button..</string>
    <string name="name1" translatable="false">Your Mabel</string>
    <string name="imp">please input the text.</string>
    <string name="name" translatable="false">Your Mabel</string>
    <string name="hint_txt">Input your name.</string>
    <string name="score1">3</string>
    <string name="score2">2</string>
    <string name="score3">1</string>
    <string name="btn_reset">reset</string>
    <string name="title_activity_temp_convert">Temp_convert</string>
    <string name="InputTemp">Input the Celsius temperature.</string>
    <string name="temp_btn" translatable="false">OK</string>
    <string name="show">0</string>
    <string name="title_activity_temp" translatable="false">temp</string>
    <string name="temp_convert">Temp_Convert</string>
    <string name="app_name2">Temp_Convert</string>

    <string name="btn_dollar_label">dollar</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_wom_label">Wom</string>
    <string name="btn_opencfg_label">Config</string>
    <string name="btn_save_label">Save</string>
    <string name="menu_setting">setting</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_t">T</string>
    <string name="Rate_name">Rate</string>
    <string name="label_open_list">OpenList</string>
    <string name="query">Please input the query content</string>
</resources>
